hide theme toggle until I resolve flickering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,21 +68,21 @@ header, footer, nav, button, a, hr, pre, code, blockquote {
 	src: url('/fonts/EBGaramond-Regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
-	font-display: swap;
+	font-display: fallback;
 }
 @font-face {
 	font-family: 'Garamond';
 	src: url('/fonts/EBGaramond-Bold.woff') format('woff');
 	font-weight: 800;
 	font-style: normal;
-	font-display: swap;
+	font-display: fallback;
 }
 @font-face {
 	font-family: 'Jost';
 	src: url('/fonts/Jost-Medium.woff') format('woff');
 	font-weight: 800;
 	font-style: normal;
-	font-display: swap;
+	font-display: fallback;
 }
 body {
 	font-family: 'Garamond', serif;
